# retirement_system

./: .gitattributes  .gitignore  CONTRIBUTING.md  PROJECT_MANIFEST.md  build.py  conftest.py  coverage.xml  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  retirement_planner.spec  system_config.csv
.claude/: launch.json  settings.local.json
android/: SETUP.md  build.gradle.kts  gradle.properties  settings.gradle.kts
data/: prefs.json
documentation/: ANDROID_MOBILE_ENHANCEMENT_PLAN.md  ANNUAL_MAINTENANCE_RUNBOOK.md  API_CONTRACTS.md  CI_SETUP.md  CLAUDE.md  CURRENT_SYSTEM_DESIGN_SPEC.md  DB_CANONICAL_MIGRATION_PLAN.md  FLASK_REMOVAL_ARCHITECTURE.md  GOLDEN_MASTER_CHANGELOG.md  HAPPY_PATH_E2E_TEST_PLAN.md  HOLDING_PERIOD_REAL_LOSS_ALLOCATION_PLAN.md  IMMEDIATE_NEXT_ACTIONS_IMPLEMENTATION.md  MOBILE_TEST_CHECKLIST.md  MODULE_REFRAMING_INPUTS_OUTPUTS.md  PHASE_C_COMPLETION_STATUS.md  PHASE_C_LEGACY_REMOVAL_BRIEF.md  PHASE_D_TIER_3B_DASHBOARD_MODULARIZATION.md  PLANNING_WORKBENCH_CONSOLIDATION_PROPOSAL.md  PLAN_METADATA_SCHEMA.md  SYSTEM_MODERNIZATION_PLAN.md  SYSTEM_REVIEW_AND_REFACTOR_PLAN.md  retirement_system_design_critique.md  retirement_system_live_review_addendum.md  retirement_system_ui_implementation_plan.md
frontend/: admin.html  index.html
input/: README_INPUT_PACKAGE.md  README_YTD_INPUTS.md  asset_class_optimizer_controls.csv  asset_class_optimizer_controls.json  asset_class_optimizer_controls.yaml  client_assets.csv  client_assets.csv.yaml_recover_backup  client_assets.json  client_assets.yaml  client_business.csv  client_data.csv  client_data.json  client_data.yaml  client_holdings.csv  client_household.csv  client_household.csv.yaml_recover_backup  client_household.json  client_household.yaml  client_income.csv  client_income.csv.yaml_recover_backup  client_income.json  client_income.yaml  client_insurance_estate.csv  client_insurance_estate.csv.yaml_recover_backup  client_insurance_estate.json  client_insurance_estate.yaml  client_optional_functions.csv  client_optional_functions.csv.yaml_recover_backup  client_optional_functions.json  client_optional_functions.yaml  client_policy.csv  client_policy.csv.yaml_recover_backup  client_policy.json  client_policy.yaml  client_spending.csv  client_spending.csv.yaml_recover_backup  client_spending.json  client_spending.yaml  client_spending_aliases.csv  client_spending_budget.csv  (+13 more)
launchers/: BUILD.bat  CREATE_DESKTOP_SHORTCUT.vbs  START_APP.bat  install_desktop_shortcut.bat
output/: admin_config_change_log.json  build_snapshot.json  index.html  last_build_metadata.json  live_pricing_test_results.json  market_price_cache.json  plan_summary.json  price_refresh_result.json  pricing_diagnostics.json  report_package.json  results_explorer_model.json  retirement_dashboard.html  retirement_plan.xlsx  system_config.active.csv
reference_data/: asset_correlations.csv  capital_market_assumptions.csv  generated_schema_coverage.csv  real_loss_probability.csv  schema.csv  security_master.csv  state_tax.csv  tax_constants.csv  tax_law_v10.json  tax_update_dashboard.csv
src/: __init__.py  after_tax.py  allocation_policy.py  android_api.py  api_contracts.py  build_entry.py  build_snapshot.py  config_backend.py  core.py  data_io.py  desktop_api.py  desktop_app.py  detailed_results.py  domain_models.py  engine_config_loader.py  equity_comp.py  gain_harvest.py  glossary.py  governance.py  holding_period.py  import_preview.py  local_backup_scheduler.py  local_plan_data_sync.py  local_store.py  market_data.py  meta_optimizer.py  module_catalog.py  money.py  observability.py  optimization.py  permissions.py  person_labels.py  plan_config.py  plan_data_backfill.py  plan_data_migration.py  plan_data_registry.py  planning_engines.py  planning_query_api.py  planning_workbench.py  platform_runtime.py  (+28 more)
tests/: _decomp_dashboard.py  conftest.py  golden_pricing.py  synthetic_plans.py  test_100_workbook_numbered_section_tabs.py  test_101_workbook_system_cleanup_and_widths.py  test_102_dashboard_charts_renamed_sheet_build.py  test_103_asset_allocation_lot_guidance.py  test_104_roth_comparison_component_scores.py  test_105_educational_helper_copy.py  test_105_ytd_levers_dashboard.py  test_106_helper_value_definitions_not_boilerplate.py  test_106_ytd_account_setup_db_recovery.py  test_107_unified_spending_model.py  test_107_ytd_account_currency_display.py  test_108_current_year_earned_income_removed.py  test_109_spending_architecture_followups.py  test_10_allocation_ui_backfill.py  test_110_wellness_transaction_dropdowns.py  test_111_spending_tracker_refinements.py  test_112_budget_detail_authority_refinements.py  test_113_consolidated_mapping_currency_format.py  test_114_workbook_housing_wellness_cashflow.py  test_115_budget_projection_seed_and_formatting.py  test_117_planning_levers_layout.py  test_118_hsa_other_assets_controls.py  test_118_spending_reconciliation_fields.py  test_119_ira_conversion_outflows.py  test_11_compact_allocation_selection.py  test_120_earned_income_retirement_boundary.py  test_121_workbook_account_label_binding.py  test_122_cash_bridge_next_housing.py  test_124_architecture_spending_coherence.py  test_125_flask_free_runtime.py  test_126_service_extraction.py  test_127_planning_workbench_consolidation.py  test_12_package_consolidation.py  test_136_build_preflight_contract.py  test_137_roadmap_usability_surfaces.py  test_138_build_snapshot_contract.py  (+183 more)
tools/: INSTALL_DESKTOP_ICON.py  analyze_drift.py  backup_to_onedrive.py  build_release_package.py  build_workbook.py  bump_version.py  check_package_clean.py  check_plan_data_sync.py  check_version_surfaces.py  generate_schema_coverage.py  init_backend.py  launch_ui.py  manage_secret.py  manage_user.py  migrate_plan_data.py  migrate_spending_model.py  profile_projection.py  refresh_prices.py  release_gate.py  run_dev_server.py  run_regression.py  run_wsgi_server.py  set_local_mode.py  sync_config_backends.py  sync_plan_data_from_folder.py  validate_clean_overlay.py  validate_pdia_money_and_negative.js  validate_scenario_ui.js
(+191 files in other folders)
