[tool.pytest.ini_options]
# Lets `pytest` run from the repo root with no manual PYTHONPATH=. — the test
# suite imports `src.*` as an absolute package relative to the project root.
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: exercises the full build pipeline via subprocess; skip locally with -m 'not slow'",
]
# Safety net, not a performance target: a test that leaks global state and
# triggers a real (hanging) network call should fail loudly instead of
# hanging CI indefinitely. 150s comfortably exceeds the slowest legitimate
# test (the build-pipeline smoke test's own internal 120s subprocess timeout).
timeout = 150
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "retirement-planner"
version = "10.0.0"
description = "Comprehensive retirement planning analysis and workbook generation"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<3",
    "openpyxl>=3.1,<4",
    "reportlab>=4.0,<5",
    "matplotlib>=3.8,<4",
    "pillow>=10,<12",
    "cryptography>=42,<46",
    "pywebview>=4.0,<7",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Start narrow: syntax errors and undefined names are unambiguous bugs with
# zero pre-existing violations once E9/F821 issues are fixed. F401 (unused
# imports) etc. currently has ~2800 pre-existing hits across the repo and
# should be enabled once that backlog is cleaned up (see Phase 5 of
# documentation/SYSTEM_REVIEW_AND_REFACTOR_PLAN.md), not as a day-one CI gate.
select = ["E9", "F821"]

[tool.mypy]
# `mypy src/` currently reports ~264 pre-existing errors, not a day-one CI
# gate (same reasoning as the ruff F401 backlog above). Breakdown: 102 are
# false positives — src/server/{admin,base,workbook}_routes.py and
# src/reporting/sheets_stress.py use `from .app_core import *` /
# `from .workbook_common import *`, and mypy does not reliably resolve names
# through wildcard imports the way the Python runtime does. The remaining
# ~162 (arg-type, no-redef, union-attr, operator, call-arg, ...) are a real
# backlog worth working through incrementally, not fixing wholesale as a side
# effect of adding the tool. Run `mypy src/ --ignore-missing-imports` locally;
# CI runs it informationally (see .github/workflows/ci.yml) without failing
# the build until the backlog is addressed.
ignore_missing_imports = true
select = ["E", "F", "W"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "W503",  # line break before binary operator
    "E741",  # ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # unused imports in test fixtures
"__init__.py" = ["F401"]  # unused imports in __init__ files

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short -q"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
