[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "retirement-planner"
version = "10.0.0"
description = "Comprehensive retirement planning analysis and workbook generation"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.10,<2",
    "lxml>=4.9,<7",
    "openpyxl>=3.1,<4",
    "reportlab>=4.0,<5",
    "matplotlib>=3.8,<4",
    "pillow>=10,<12",
    "cryptography>=42,<46",
    "pywebview>=4.0,<7",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E741",  # ambiguous variable name
    # The rules below are incompatible with this codebase's established
    # "consolidated module" architecture: several src/ modules (core.py,
    # app_core.py, planning_engines.py, taxes.py, workbook_common.py, ...)
    # merge what were once separate files and deliberately import/define
    # names that look locally unused but exist to be re-exported via
    # `from .module import *`, or to progressively override an earlier
    # definition later in the same consolidated file. Verified by attempting
    # an automated F401 cleanup pass and finding it broke cross-module
    # attribute access (e.g. `_legacy_pe._aa`) and wildcard re-exports
    # (e.g. `load_active_config`, `fetch_price`) in ways the test suite only
    # partially caught. Also excludes E401/E402/E701/E702/E731, which flag
    # this codebase's deliberate dense single-line style rather than bugs.
    "E401",  # multiple imports on one line
    "E402",  # module level import not at top of file (future-import-before-docstring convention)
    "E701",  # multiple statements on one line (colon)
    "E702",  # multiple statements on one line (semicolon)
    "E731",  # lambda assignment
    "F401",  # unused import (re-exported via wildcard imports elsewhere)
    "F403",  # `from module import *` used
    "F405",  # name may be undefined from star imports
    "F811",  # redefinition (progressive override within consolidated modules)
    "F841",  # unused local variable
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short -q"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
